--- a/index.html
+++ b/index.html
@@ -88,55 +88,26 @@
               </a>
             </span>
 
-              <span class="link-block">
-                  <a href="https://huggingface.co/spaces/ToughStone/ContextualBench_Leaderboard" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span>🏆 Leaderboard</span>
-                </a>
-              </span>
+	      <span class="link-block">
+		  <a href="https://huggingface.co/spaces/ToughStone/ContextualBench_Leaderboard" target="_blank"
+		  class="external-link button is-normal is-rounded is-dark">
+		  <span>🏆 Leaderboard</span>
+		</a>
+	      </span>
 
-              <span class="link-block">
-                  <a href="https://colab.research.google.com/drive/1av7JdDk005qQL6WdAVL0kFlah7VXV0Md?usp=sharing" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="fa fa-code"></i>
-                  </span>
-                  <span>Tasks Evaluation</span>
-                </a>
-              </span>
+	      <span class="link-block">
+		  <a href="https://github.com/Tough-Stone/Counter-Context-Reasoning" target="_blank"
+		  class="external-link button is-normal is-rounded is-dark">
+		  <span>🧑‍💻 Code</span>
+		</a>
+	      </span>
 
-              <span class="link-block">
-                  <a href="https://colab.research.google.com/drive/1yphyMKFFrK7TrNVhbVIlzkYfs77mZBxi?usp=sharing" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="fa fa-code"></i>
-                  </span>
-                  <span>Explanation of Violation Evaluation</span>
-                </a>
-              </span>
-
-
-
-		       <!-- HuggingFace Link -->
-            <span class="link-block">
-                <a href="https://huggingface.co/datasets/nlphuji/whoops-analysis" target="_blank"
-                class="external-link button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <p style="font-size:20px">&#x1F917;</p>
-                </span>
-                <span>Analysis Dataset</span>
-              </a>
-            </span>
-
-            <span class="link-block">
-                <a href="https://huggingface.co/spaces/nlphuji/whoops-explorer-analysis" target="_blank"
-                class="external-link button is-normal is-rounded is-dark">
-                <span class="icon">
-                  <p style="font-size:20px">&#x1F917;</p>
-                </span>
-                <span>Analysis Explorer</span>
-              </a>
-            </span>
+	      <span class="link-block">
+		  <a href="" target="_blank"
+		  class="external-link button is-normal is-rounded is-dark">
+		  <span>📄 Paper</span>
+		</a>
+	      </span>
 
             </div>
           </div>
