--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="publication-flipped">
-        <h2 class="title is-3">What makes these images weird?</h2>
+        <h2 class="title is-3">Dose these images conform to the given contexts?</h2>
         <div class="content has-text-justified">
 <!--            CLICK TO GET AN ANSWER!-->
         <div class="flip-box-container">
@@ -162,6 +162,29 @@
             </div>
           </div>
 
+         <div class="flip-box">
+            <div class="flip-box-inner">
+              <div class="flip-box-front">
+                <img src="static/images/1dfcec6aaf52317654922201bfdc1fb40cd0ab130144424f54ac26c3f5f3a082.png" alt="Paris" style="width:300px;height:300px">
+              </div>
+              <div class="flip-box-back">
+                <h2><br><br>A wolf howls at the sun</h2>
+                <p class="has-text-weight-bold">Wolves are known to howl on a full moon, so it may not be customary to do it in the middle of the day</p>
+              </div>
+            </div>
+          </div>
+
+         <div class="flip-box">
+            <div class="flip-box-inner">
+              <div class="flip-box-front">
+                <img src="static/images/1dfcec6aaf52317654922201bfdc1fb40cd0ab130144424f54ac26c3f5f3a082.png" alt="Paris" style="width:300px;height:300px">
+              </div>
+              <div class="flip-box-back">
+                <h2><br><br>A wolf howls at the sun</h2>
+                <p class="has-text-weight-bold">Wolves are known to howl on a full moon, so it may not be customary to do it in the middle of the day</p>
+              </div>
+            </div>
+          </div>
         </div>
 <!--        </p>-->
         </div>
