--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <img src="static/images/nitzangu_Albert_Einstein_holds_an_iphone_realistic_style_ba15ea7b-b829-478b-adef-b474ccf01a2a.png" alt="Paris" style="width:300px;height:300px">
+                <img src="static/images/e-f-7-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
                 <h2><br><br>Albert Einstein is holding a smartphone</h2>
@@ -141,7 +141,7 @@
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <img src="static/images/712a29029099a1a4a85139666a6d6062407eb4511fa0d48789001413678ac91a.png" alt="Paris" style="width:300px;height:300px">
+                <img src="static/images/c-f-1-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
                 <h2><br><br>A lit candle is sitting inside a tightly sealed glass jar</h2>
@@ -153,7 +153,7 @@
          <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
-                <img src="static/images/1dfcec6aaf52317654922201bfdc1fb40cd0ab130144424f54ac26c3f5f3a082.png" alt="Paris" style="width:300px;height:300px">
+                <img src="static/images/b-f-2-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
                 <h2><br><br>A wolf howls at the sun</h2>
@@ -162,29 +162,7 @@
             </div>
           </div>
 
-         <div class="flip-box">
-            <div class="flip-box-inner">
-              <div class="flip-box-front">
-                <img src="static/images/1dfcec6aaf52317654922201bfdc1fb40cd0ab130144424f54ac26c3f5f3a082.png" alt="Paris" style="width:300px;height:300px">
-              </div>
-              <div class="flip-box-back">
-                <h2><br><br>A wolf howls at the sun</h2>
-                <p class="has-text-weight-bold">Wolves are known to howl on a full moon, so it may not be customary to do it in the middle of the day</p>
-              </div>
-            </div>
-          </div>
 
-         <div class="flip-box">
-            <div class="flip-box-inner">
-              <div class="flip-box-front">
-                <img src="static/images/1dfcec6aaf52317654922201bfdc1fb40cd0ab130144424f54ac26c3f5f3a082.png" alt="Paris" style="width:300px;height:300px">
-              </div>
-              <div class="flip-box-back">
-                <h2><br><br>A wolf howls at the sun</h2>
-                <p class="has-text-weight-bold">Wolves are known to howl on a full moon, so it may not be customary to do it in the middle of the day</p>
-              </div>
-            </div>
-          </div>
         </div>
 <!--        </p>-->
         </div>
