--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                 <img src="static/images/e-f-7-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
-                <h2><br><br>Albert Einstein is holding a smartphone</h2>
-                <p class="has-text-weight-bold">Albert Einstein died in 1955, decades before the first smartphone was invented (1994)</p>
+                <h2><br><br>《Copper Combustion Experiment》</h2>
+                <p class="has-text-weight-bold">This image does not align with the "copper combustion experiment" because copper burning produces a green flame, not a yellow one.</p>
               </div>
             </div>
           </div>
@@ -144,8 +144,8 @@
                 <img src="static/images/c-f-1-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
-                <h2><br><br>A lit candle is sitting inside a tightly sealed glass jar</h2>
-                <p class="has-text-weight-bold">A candle needs a constant supply of oxygen to burn, which does not exist in a sealed bottle, so it is unlikely to see a burning candle inside a sealed bottle</p>
+                <h2><br><br>《Santra Claus》</h2>
+                <p class="has-text-weight-bold">This image does not correspond to Santa Claus because Santa Claus is an elderly man, not a young boy, and his vehicle is pulled by reindeer, not sled dogs, and it should be loaded with gifts, not pumpkins.</p>
               </div>
             </div>
           </div>
@@ -156,8 +156,8 @@
                 <img src="static/images/b-f-2-5.webp" alt="Paris" style="width:300px;height:300px">
               </div>
               <div class="flip-box-back">
-                <h2><br><br>A wolf howls at the sun</h2>
-                <p class="has-text-weight-bold">Wolves are known to howl on a full moon, so it may not be customary to do it in the middle of the day</p>
+                <h2><br><br>《Life of Pi》</h2>
+                <p class="has-text-weight-bold">This image does not correspond to the story of "Life of Pi," because the original story features a boy and a tiger drifting on a wooden boat, whereas the image shows a girl and a kitten, and they are on a motorboat instead.</p>
               </div>
             </div>
           </div>
