--- a/index.html
+++ b/index.html
@@ -162,9 +162,10 @@
             </div>
           </div>
         </div>
-
-
-	<div class="flip-box-container">
+      </div>
+        <div class="content has-text-justified">
+<!--            CLICK TO GET AN ANSWER!-->
+        <div class="flip-box-container">
           <div class="flip-box">
             <div class="flip-box-inner">
               <div class="flip-box-front">
@@ -201,9 +202,13 @@
             </div>
           </div>
         </div>
-<!--        </p>-->
-        </div>
       </div>
+
+	      
+      </div>
+
+		
+        </div>
     </div>
   </div>
 </section>
