--- a/index.html
+++ b/index.html
@@ -270,6 +270,58 @@
                             </h3>
                         </div>
 
+                        <div class="item">
+                            <h2 class="subtitle is-size-3-tablet has-text-weight-bold has-text-centered has-background-info-light mr-0 pt-3 pb-3">
+                            Baseline V&L models results
+                            </h2>
+                            <h3 class="subtitle is-size-4-tablet has-text-left pr-4 pl-4 pt-3 pb-3">
+                            <p>
+                                <style>
+                                    .showresult {
+                                        display: flex;
+                                        justify-content: space-between;
+                                        align-items: flex-start;
+                                    }
+                                    .image-text-container {
+                                        width: 45%;
+                                        text-align: center;
+                                    }
+                                    .showresult img {
+                                        width: 95%;
+                                        height: auto;
+                                    }
+                                    .text-container {
+                                        background-color: #000; /* 黑色背景 */
+                                        padding: 10px;
+                                        margin-bottom: 10px;
+                                        border-radius: 5px;
+                                        border: 2px solid rgb(0, 0, 0); /* 黑色边框 */
+                                        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* 添加阴影 */
+                                    }
+                                    .textl {
+                                        color: rgb(25, 172, 225); /* 白色文本，以便在黑色背景上清晰显示 */
+                                        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* 文本阴影，增加层次感 */
+                                    }
+                                    .textr {
+                                        color: rgb(26, 138, 8); /* 白色文本，以便在黑色背景上清晰显示 */
+                                        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* 文本阴影，增加层次感 */
+                                    }
+                                </style>
+                                
+                                <div class="showresult">
+                                    <div class="image-text-container">
+                                        <div class="textl">Image Identification</div>
+                                        <img src="static/images/ide.png" alt="IDE Image">
+                                    </div>
+                                    <div class="image-text-container">
+                                        <div class="textr">Image Explanation</div>
+                                        <img src="static/images/ela.png" alt="ELA Image">
+                                    </div>
+                                </div>
+                            </p>
+                            </h3>
+                        </div>
+
                     </div>
                 </div>
             </div>
